CLOSED FIXED38762
[Qt] Flash Plugin is not working on mac-cocoa-32
https://bugs.webkit.org/show_bug.cgi?id=38762
Summary [Qt] Flash Plugin is not working on mac-cocoa-32
Jesus Sanchez-Palencia
Reported 2010-05-07 11:06:31 PDT
Tested on QtLauncher, with Qt 4.7 HEAD d6cb7c903069e1dfde3ffc69649354c97d160b68 and WebKit r58944. Reproduced on Leopard and Snow Leopard.
Attachments
Luiz Agostini
Comment 1 2010-05-07 14:26:46 PDT
Tor Arne, can you have a look at this?
Jesus Sanchez-Palencia
Comment 2 2010-05-11 14:35:40 PDT
*** Bug 37328 has been marked as a duplicate of this bug. ***
Tor Arne Vestbø
Comment 3 2010-05-18 04:58:16 PDT
Works fine here. What exactly is not working? Note that Qt 4.7 is by default built in a Cocoa 64-bit configuration, which does not support Flash.
Kas Stepanenko
Comment 4 2010-05-18 05:16:53 PDT
I wrote some details in my bug (it is duplicate of this one), may be it can help. https://bugs.webkit.org/show_bug.cgi?id=37328
Jesus Sanchez-Palencia
Comment 5 2010-05-18 05:21:55 PDT
(In reply to comment #3) > Works fine here. What exactly is not working? > > Note that Qt 4.7 is by default built in a Cocoa 64-bit configuration, which does not support Flash. Tested again with WebKit r59602 and Qt 4.7 HEAD 6100e83f3cbf40199da3078c1954a4dc1f77cb8f. I'm building Qt using '-arch x86', so it is 32 bits, right? Load www.youtube.com and try to play a video. You will have sound but not the video itself. Works fine with QGraphicsWebView.
Kenneth Rohde Christiansen
Comment 6 2010-05-24 07:59:43 PDT
If this is a regression, can you pelase bisect and find out what revision broke it? It is a release blocker.
Tor Arne Vestbø
Comment 7 2010-05-24 08:16:07 PDT
Flash (and youtube in particular for some reason) has been flakey/not-working-too-well on Cocoa-32 in the past. The only properly working configuration right now is Carbon afaik.
Kenneth Rohde Christiansen
Comment 8 2010-05-24 08:18:55 PDT
(In reply to comment #7) > Flash (and youtube in particular for some reason) has been flakey/not-working-too-well on Cocoa-32 in the past. The only properly working configuration right now is Carbon afaik. So you don't consider this a regression?
Tor Arne Vestbø
Comment 9 2010-05-25 02:45:58 PDT
(In reply to comment #8) > (In reply to comment #7) > > Flash (and youtube in particular for some reason) has been flakey/not-working-too-well on Cocoa-32 in the past. The only properly working configuration right now is Carbon afaik. > > So you don't consider this a regression? Not unless it's also failing on Carbon-builds. But I do think we should try to fix it.
Simon Hausmann
Comment 10 2010-05-29 01:14:48 PDT
Jesus or Tor Arne: Can you try this in a Carbon build and see if it's a regression or not? Thanks :)
Jesus Sanchez-Palencia
Comment 11 2010-06-02 09:57:15 PDT
(In reply to comment #10) > Jesus or Tor Arne: Can you try this in a Carbon build and see if it's a regression or not? > > Thanks :) Works with a Carbon build. Tested with Qt 4.7 HEAD 6982c5e7f9d93d26ab5f241af0a5c6e80cd0e1ff and WebKit trunk r60561. So it's not a regression. Removing the release blocker.
Tor Arne Vestbø
Comment 12 2010-06-03 05:57:12 PDT
Got a fix for this
Simon Hausmann
Comment 13 2010-06-03 08:46:54 PDT
Kenneth Rohde Christiansen
Comment 14 2010-06-03 09:36:45 PDT
Rocks!
Simon Hausmann
Comment 15 2010-06-04 00:35:44 PDT
Revision r60621 cherry-picked into qtwebkit-2.0 with commit f595168f2668b95a75ff9faf3829df596f8f3c89
Note You need to log in before you can comment on or make changes to this bug.