[Qt] Fix NPAPI support on Mac OS X/Cocoa-32

Reviewed by Simon Hausmann.

qt_mac_window_for() returns a NSWindow on Cocoa, so we were
passing in a NSWindow instead of a WindowRef as part of the
NP_CGContext.

https://bugs.webkit.org/show_bug.cgi?id=38762

* WebCore.gypi: Reflect rename
* WebCore.pro: Reflect rename
* plugins/mac/PluginViewMac.cpp: Renamed to PluginViewMac.mm
and fix bug by getting the Carbon windowRef from the NSWindow.
* wscript: Reflect rename

Canonical link: https://commits.webkit.org/51648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60621 268f45cc-cd09-0410-ab3c-d52691b4dbfc